2010-08-06	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1654/testing
	* deviceio01/init.c, deviceio01/deviceio01.doc,
	deviceio01/deviceio01.scn, deviceio01/test_driver.c,
	deviceio01/test_driver.h, deviceio01/Makefile.am: New test added.
	* Makefile.am, configure.ac: Changes to added above test.
	* tar02/init.c, tar02/tar02.scn: New test case added: IMFS_dump().

2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for rtems_print_buffer().
	* dumpbuf01/.cvsignore, dumpbuf01/Makefile.am, dumpbuf01/dumpbuf01.doc,
	dumpbuf01/dumpbuf01.scn, dumpbuf01/init.c: New files.

2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bspcmdline01/bspcmdline01.scn, bspcmdline01/init.c: Add test cases to
	improve coverage.

2010-07-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: Apply clean-local to remove
	intital_fs directory.

2010-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: Apply TARTESTS.

2010-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am:
	Apply $LN_S, $PAX. Use subshell for tarball creation.
	Don't add initial_fs to CLEANFILES.
	* tar02/Makefile.am:
	Apply $LN_S, $PAX. Use subshell for tarball creation.

2010-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add AC_PROG_LN_S.
	Add AC_PATH_PROG([PAX]).
	Add AM_CONDITIONAL(TARTESTS).
	* tar01/Makefile.am, tar02/Makefile.am:
	Eliminate stamp-filesystem.

2010-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am:
	Add BUILT_SOURCES.

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: 
	Eliminate stamp-fs-tar. Reorder CLEANFILES.
	Apply BIN2C -C/-H.

2010-07-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* tar01/Makefile.am, tar02/Makefile.am: Fix dependencies for parallel
	build.

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>
