@@ -32,7 +32,7 @@ termios_baud_to_number(B75) - OK
 termios_baud_to_number(B110) - OK
 termios_baud_to_number(B134) - OK
 termios_baud_to_number(B150) - OK
-termios_baud_to_number(B200) - O
+termios_baud_to_number(B200) - OK
 termios_baud_to_number(B300) - OK
 termios_baud_to_number(B600) - OK
 termios_baud_to_number(B1200) - OK
@@ -70,9 +70,6 @@ termios_number_to_baud(B57600) - OK
 termios_number_to_baud(B115200) - OK
 termios_number_to_baud(B230400) - OK
 termios_number_to_baud(B460800) - OK
-tcsetattr - invalid operation - ENOTSUP
-
-tcsetattr - drain - OK
 
 Init - rtems_io_register_driver - Termios Test Driver - OK
 Termios_test_driver - rtems_io_register /dev/test - OK
@@ -80,87 +77,91 @@ Init - Major slot returned = 2
 Init - open - /dev/test - OK
 Termios_test_driver - rtems_set_initial_baud - bad baud - OK
 Termios_test_driver - rtems_set_initial_baud - 38400 - OK
+tcsetattr - invalid operation - ENOTSUP
+
+tcsetattr - drain - OK
+set_attributes - B0 5-NONE-1
 Test termios setting device baud rate...
 tcsetattr(TCSANOW, B0) - OK
-set_attributes - B0 8-NONE-1
+set_attributes - B0 5-NONE-1
 tcsetattr(TCSADRAIN, B0) - OK
-set_attributes - B0 8-NONE-1
+set_attributes - B0 5-NONE-1
 tcsetattr(TCSANOW, B50) - OK
-set_attributes - B50 8-NONE-1
+set_attributes - B50 5-NONE-1
 tcsetattr(TCSADRAIN, B50) - OK
-set_attributes - B50 8-NONE-1
+set_attributes - B50 5-NONE-1
 tcsetattr(TCSANOW, B75) - OK
-set_attributes - B75 8-NONE-1
+set_attributes - B75 5-NONE-1
 tcsetattr(TCSADRAIN, B75) - OK
-set_attributes - B75 8-NONE-1
+set_attributes - B75 5-NONE-1
 tcsetattr(TCSANOW, B110) - OK
-set_attributes - B110 8-NONE-1
+set_attributes - B110 5-NONE-1
 tcsetattr(TCSADRAIN, B110) - OK
-set_attributes - B110 8-NONE-1
+set_attributes - B110 5-NONE-1
 tcsetattr(TCSANOW, B134) - OK
-set_attributes - B134 8-NONE-1
+set_attributes - B134 5-NONE-1
 tcsetattr(TCSADRAIN, B134) - OK
-set_attributes - B134 8-NONE-1
+set_attributes - B134 5-NONE-1
 tcsetattr(TCSANOW, B150) - OK
-set_attributes - B150 8-NONE-1
+set_attributes - B150 5-NONE-1
 tcsetattr(TCSADRAIN, B150) - OK
-set_attributes - B150 8-NONE-1
+set_attributes - B150 5-NONE-1
 tcsetattr(TCSANOW, B200) - OK
-set_attributes - B200 8-NONE-1
+set_attributes - B200 5-NONE-1
 tcsetattr(TCSADRAIN, B200) - OK
-set_attributes - B200 8-NONE-1
+set_attributes - B200 5-NONE-1
 tcsetattr(TCSANOW, B300) - OK
-set_attributes - B300 8-NONE-1
+set_attributes - B300 5-NONE-1
 tcsetattr(TCSADRAIN, B300) - OK
-set_attributes - B300 8-NONE-1
+set_attributes - B300 5-NONE-1
 tcsetattr(TCSANOW, B600) - OK
-set_attributes - B600 8-NONE-1
+set_attributes - B600 5-NONE-1
 tcsetattr(TCSADRAIN, B600) - OK
-set_attributes - B600 8-NONE-1
+set_attributes - B600 5-NONE-1
 tcsetattr(TCSANOW, B1200) - OK
-set_attributes - B1200 8-NONE-1
+set_attributes - B1200 5-NONE-1
 tcsetattr(TCSADRAIN, B1200) - OK
-set_attributes - B1200 8-NONE-1
+set_attributes - B1200 5-NONE-1
 tcsetattr(TCSANOW, B1800) - OK
-set_attributes - B1800 8-NONE-1
+set_attributes - B1800 5-NONE-1
 tcsetattr(TCSADRAIN, B1800) - OK
-set_attributes - B1800 8-NONE-1
+set_attributes - B1800 5-NONE-1
 tcsetattr(TCSANOW, B2400) - OK
-set_attributes - B2400 8-NONE-1
+set_attributes - B2400 5-NONE-1
 tcsetattr(TCSADRAIN, B2400) - OK
-set_attributes - B2400 8-NONE-1
+set_attributes - B2400 5-NONE-1
 tcsetattr(TCSANOW, B4800) - OK
-set_attributes - B4800 8-NONE-1
+set_attributes - B4800 5-NONE-1
 tcsetattr(TCSADRAIN, B4800) - OK
-set_attributes - B4800 8-NONE-1
+set_attributes - B4800 5-NONE-1
 tcsetattr(TCSANOW, B9600) - OK
-set_attributes - B9600 8-NONE-1
+set_attributes - B9600 5-NONE-1
 tcsetattr(TCSADRAIN, B9600) - OK
-set_attributes - B9600 8-NONE-1
+set_attributes - B9600 5-NONE-1
 tcsetattr(TCSANOW, B19200) - OK
-set_attributes - B19200 8-NONE-1
+set_attributes - B19200 5-NONE-1
 tcsetattr(TCSADRAIN, B19200) - OK
-set_attributes - B19200 8-NONE-1
+set_attributes - B19200 5-NONE-1
 tcsetattr(TCSANOW, B38400) - OK
-set_attributes - B38400 8-NONE-1
+set_attributes - B38400 5-NONE-1
 tcsetattr(TCSADRAIN, B38400) - OK
-set_attributes - B38400 8-NONE-1
+set_attributes - B38400 5-NONE-1
 tcsetattr(TCSANOW, B57600) - OK
-set_attributes - B57600 8-NONE-1
+set_attributes - B57600 5-NONE-1
 tcsetattr(TCSADRAIN, B57600) - OK
-set_attributes - B57600 8-NONE-1
+set_attributes - B57600 5-NONE-1
 tcsetattr(TCSANOW, B115200) - OK
-set_attributes - B115200 8-NONE-1
+set_attributes - B115200 5-NONE-1
 tcsetattr(TCSADRAIN, B115200) - OK
-set_attributes - B115200 8-NONE-1
+set_attributes - B115200 5-NONE-1
 tcsetattr(TCSANOW, B230400) - OK
-set_attributes - B230400 8-NONE-1
+set_attributes - B230400 5-NONE-1
 tcsetattr(TCSADRAIN, B230400) - OK
-set_attributes - B230400 8-NONE-1
+set_attributes - B230400 5-NONE-1
 tcsetattr(TCSANOW, B460800) - OK
-set_attributes - B460800 8-NONE-1
+set_attributes - B460800 5-NONE-1
 tcsetattr(TCSADRAIN, B460800) - OK
-set_attributes - B460800 8-NONE-1
+set_attributes - B460800 5-NONE-1
 Init - close - /dev/test - OK
 
 Init - open - /dev/test - OK
