@@ -1,3 +1,10 @@
+2010-08-09	Bharath Suri <bharath.s.jois@gmail.com>
+
+	PR 1661/testing
+	* termios01/init.c, termios01/termios_testdriver.c,
+	termios01/termios01.scn: Changes to improve coverage of
+	rtems_termios_open routine.
+
 2010-08-06	Bharath Suri <bharath.s.jois@gmail.com>
 
 	PR 1654/testing
